Fix some issues with the messaging and the timers